--- a/references.bib
+++ b/references.bib
@@ -862,7 +862,40 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2016A&A...594A..25P},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+%% Subramanian 2008
+@ARTICLE{Subramanian_2018,
+       author = {{Samui}, Saumyadip and {Subramanian}, Kandaswamy and {Srianand}, Raghunathan},
+        title = "{Efficient cold outflows driven by cosmic rays in high-redshift galaxies and their global effects on the IGM}",
+      journal = {\mnras},
+     keywords = {stars: winds, outflows, cosmic rays, galaxies: high-redshift, intergalactic medium, galaxies: magnetic fields, galaxies: star formation, Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2018,
+        month = may,
+       volume = {476},
+       number = {2},
+        pages = {1680-1695},
+          doi = {10.1093/mnras/sty287},
+archivePrefix = {arXiv},
+       eprint = {1706.01890},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.476.1680S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
+
+%% Bell 2022
+@article{Bell_2022,
+   title={Echoes of the past: ultra-high-energy cosmic rays accelerated by radio galaxies, scattered by starburst galaxies},
+   volume={511},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1093/mnras/stac031},
+   DOI={10.1093/mnras/stac031},
+   number={1},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Bell, A R and Matthews, J H},
+   year={2022},
+   month={Jan},
+   pages={448–456} }
 
 %% Planck_2016
 @ARTICLE{Planck_X,
